added css directory

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 <title>Bridge and Tunnel</title>
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <style>
 </style>
 <body>
-<div class="header">
+<div id="header">
 	<h1>Bridge and Tunnel</h1>
 	<h3>Subway. Bus. Taxi. Ferry. Car. Bike</h3>
 </div>
