added some content

--- a/index.html
+++ b/index.html
@@ -8,8 +8,31 @@
 </style>
 <body>
 <div id="header">
-	<h1>Bridge and Tunnel</h1>
-	<h3>Subway. Bus. Taxi. Ferry. Car. Bike</h3>
+		<h1>Bridge and Tunnel</h1>
+	<div id="navbar">
+		<ul id ="tabs">
+			<li id="selected"><a href="index.html">Home</a></li>
+			<li><a href="">Subway</a></li>
+			<li><a href="">Trains</a></li>
+			<li><a href="">Cars and Taxis</a></li>
+			<li><a href="">Walking and Biking</a></li>
+			<li><a href="">Great Stories</a></li>
+		</ul>
+	</div>
+</div>
+<div id="twitterlist">
+<a class="twitter-timeline" href="https://twitter.com/AlizaChasan/lists/nyctransit" data-widget-id="568215212776763392">Tweets from https://twitter.com/AlizaChasan/lists/nyctransit</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+</div>
+<div id="mostrecentstory">
+	<img src="">
+	<h2>most recent story</h2>
+	<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+	</p>
+</div>
+<div id="nextrecentstory">
+	<h2>next most recent story</h2>
+	<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 </div>
 </body>
 </html>
