--- a/bus/index.html
+++ b/bus/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Bridge and Tunnel</title>
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="../css/styles.css" rel="stylesheet">
 </head>
 <style>
 </style>
@@ -11,13 +11,13 @@
 		<h1>Bridge and Tunnel</h1>
 	<div id="navbar">
 		<ul id ="navtabs">
-			<li id="selected"><a href="index.html">Home</a></li>
-			<li><a href="subway/index.html">Subway</a></li>
-			<li><a href="bus/index.html">Bus</a></li>
-			<li><a href="trains/index.html">Trains</a></li>
-			<li><a href="carsandtaxis/index.html">Cars and Taxis</a></li>
-			<li><a href="walkingandbiking/index.html">Walking and Biking</a></li>
-			<li><a href="incharge/index.html">Who's in Charge?</a></li>
+			<li><a href="../index.html">Home</a></li>
+			<li><a href="../subway/index.html">Subway</a></li>
+			<li id="selected"><a href="index.html">Bus</a></li>
+			<li><a href="../trains/index.html">Trains</a></li>
+			<li><a href="../carsandtaxis/index.html">Cars and Taxis</a></li>
+			<li><a href="../walkingandbiking/index.html">Walking and Biking</a></li>
+			<li><a href="../incharge/index.html">Who's in Charge?</a></li>
 		</ul>
 	</div>
 </div>
@@ -27,9 +27,8 @@
 </div>
 <div id="mostrecentstory">
 	<img src="">
-	<h2>most recent story</h2>
-	<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-	</p>
+	<h2>Port Authority Bus Terminal</h2>
+<iframe src="//player.vimeo.com/video/111996451" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/111996451">Port Authority</a> from <a href="https://vimeo.com/user33310895">Aliza Chasan</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 </div>
 <div id="nextrecentstory">
 	<h2>next most recent story</h2>
