--- a/subway/index.html
+++ b/subway/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Bridge and Tunnel</title>
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="../css/styles.css" rel="stylesheet">
 </head>
 <style>
 </style>
@@ -11,13 +11,13 @@
 		<h1>Bridge and Tunnel</h1>
 	<div id="navbar">
 		<ul id ="navtabs">
-			<li id="selected"><a href="index.html">Home</a></li>
-			<li><a href="subway/index.html">Subway</a></li>
-			<li><a href="bus/index.html">Bus</a></li>
-			<li><a href="trains/index.html">Trains</a></li>
-			<li><a href="carsandtaxis/index.html">Cars and Taxis</a></li>
-			<li><a href="walkingandbiking/index.html">Walking and Biking</a></li>
-			<li><a href="incharge/index.html">Who's in Charge?</a></li>
+			<li><a href="../index.html">Home</a></li>
+			<li id="selected"><a href="index.html">Subway</a></li>
+			<li><a href="../bus/index.html">Bus</a></li>
+			<li><a href="../trains/index.html">Trains</a></li>
+			<li><a href="../carsandtaxis/index.html">Cars and Taxis</a></li>
+			<li><a href="../walkingandbiking/index.html">Walking and Biking</a></li>
+			<li><a href="../incharge/index.html">Who's in Charge?</a></li>
 		</ul>
 	</div>
 </div>
