random class commit

--- a/bus/index.html
+++ b/bus/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Bridge and Tunnel</title>
     <link href="../css/styles.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Signika:600' rel='stylesheet' type='text/css'>
 </head>
 <style>
 </style>
@@ -13,7 +14,7 @@
 		<ul id ="navtabs">
 			<li><a href="../index.html">Home</a></li>
 			<li><a href="../subway/index.html">Subway</a></li>
-			<li id="selected"><a href="index.html">Bus</a></li>
+			<li id="selected"><a href="bus/index.html">Bus</a></li>
 			<li><a href="../trains/index.html">Trains</a></li>
 			<li><a href="../carsandtaxis/index.html">Cars and Taxis</a></li>
 			<li><a href="../walkingandbiking/index.html">Walking and Biking</a></li>
