--- a/incharge/index.html
+++ b/incharge/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Bridge and Tunnel</title>
     <link href="../css/styles.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Signika:600' rel='stylesheet' type='text/css'>
 </head>
 <style>
 </style>
@@ -17,7 +18,7 @@
 			<li><a href="../trains/index.html">Trains</a></li>
 			<li><a href="../carsandtaxis/index.html">Cars and Taxis</a></li>
 			<li><a href="../walkingandbiking/index.html">Walking and Biking</a></li>
-			<li id="selected"><a href="index.html">Who's in Charge?</a></li>
+			<li id="selected"><a href="incharge/index.html">Who's in Charge?</a></li>
 		</ul>
 	</div>
 </div>
@@ -28,26 +29,73 @@
 <div id="council">
 <h2>NYC Council Commission on Transportation</h2>
 <ul id="councillist">
-	<li>Ydanis Rodriguez: D-Manhattan, Chair - 917-521-2616 and 212-788-7053</li>
-	<li>Daniel Garodnick: D-Manhattan - 212-818-0580 and 212-788-7393</li>
-	<li>James Vacca: D-Bronx - 718-931-1721 and 212-788-7375</li>
-	<li>Margaret Chin: D-Manhattan - 212-587-3159 and 212-788-7259</li>
-	<li>Stephen Levin: D-Brooklyn - 718-875-5200 and 212-788-7348</li>
-	<li>Deborah Rose: D-Staten Island - 718-556-7370 and 212-788-6972</li>
-	<li>Jimmy Van Bramer: D-Queens - 718-383-9566 and 212-788-7370</li>
-	<li>Mark Weprin: D-Queens - 718-468-0137 and 212-788-6984</li>
-	<li>Antonio Reynoso: D-Brooklyn - 718-963-3141 and 212-788-7095</li>
-	<li>I. Daneek Miller: D-Queens - 718-776-3700 and 212-788-7084</li>
-	<li>Carlos Menchaca: D-Brooklyn - 718-439-9012 and 212-788-7372</li>
-	<li>David Greenfield: D-Brooklyn - 718-853-2704 and 718-853-2704</li>
-	<li>Costa Constantinides: D-Queens - 718-274-4500 and 212-788-6963</li>
+	<li><span>Ydanis Rodriguez, D-Manhattan, Chair:</span> 917-521-2616 and 212-788-7053</li>
+	<li><span>Daniel Garodnick, D-Manhattan:</span> 212-818-0580 and 212-788-7393</li>
+	<li><span>James Vacca, D-Bronx:</span> 718-931-1721 and 212-788-7375</li>
+	<li><span>Margaret Chin, D-Manhattan:</span> 212-587-3159 and 212-788-7259</li>
+	<li><span>Stephen Levin, D-Brooklyn:</span> 718-875-5200 and 212-788-7348</li>
+	<li><span>Deborah Rose, D-Staten Island:</span> 718-556-7370 and 212-788-6972</li>
+	<li><span>Jimmy Van Bramer, D-Queens:</span> 718-383-9566 and 212-788-7370</li>
+	<li><span>Mark Weprin, D-Queens:</span> 718-468-0137 and 212-788-6984</li>
+	<li><span>Antonio Reynoso, D-Brooklyn:</span> 718-963-3141 and 212-788-7095</li>
+	<li><span>I. Daneek Miller, D-Queens:</span> 718-776-3700 and 212-788-7084</li>
+	<li><span>Carlos Menchaca, D-Brooklyn:</span> 718-439-9012 and 212-788-7372</li>
+	<li><span>David Greenfield, D-Brooklyn:</span> 718-853-2704 and 718-853-2704</li>
+	<li><span>Costa Constantinides, D-Queens:</span> 718-274-4500 and 212-788-6963</li>
 </ul>
 </div>
 <div id="statesenate">
 <h2>NYS Senate Commission on Transportation</h2>
+<ul id="senatelist">
+<li><span>Joseph E. Robach, chair, R-District 56:</span> (585) 225-3650, (518) 455-2909, robach@nysenate.gov</li>
+<li><span>Carl L. Marcellino, vice chair, R-District 5:</span> (516) 922-1811, (518) 455-2390, marcelli@senate.state.ny.us</li>
+<li><span>Tony Avella, D-District 11:</span> (718) 357-3094, (518) 455-2210, avella@nysenate.gov</li>
+<li><span>Ruben Diaz, D-District 32:</span> (718) 991-3161, (518) 455-2511, diaz@nysenate.gov</li>
+<li><span>Martin Malave Dilan, D-District 18:</span> (518) 455-2177, (718) 573-1726, dilan@nysenate.gov</li>
+<li><span>Patrick M. Gallivan, R-District 59:</span> (518) 455-3471, (585) 786-5048, (585) 243-6929, 716-656-8544, gallivan@nysenate.gov</li>
+<li><span>Timothy M. Kennedy, D-District 63:</span> (518) 455-2426, (716) 826-2683, kennedy@nysenate.gov</li>
+<li><span>William J. Larkin Jr., R-District 39:</span> (845) 567-1270, (518) 455-2770, larkin@senate.state.ny.us</li>
+<li><span>Jack M. Martins, R-District 7:</span> (516) 746-5924, (518) 455-3265, martins@nysenate.gov</li>
+<li><span>Michael F. Nozzolio, R-District 54:</span> (518) 455-2366, nozzolio@nysenate.gov</li>
+<li><span>Thomas F. O'Mara, R-District 58:</span> (607) 735-9671, (607) 776-3201, (518) 455-2091, omara@nysenate.gov</li>
+<li><span>Marc Panepinto, D-District 60:</span> (716) 854-8705, (518) 455-2760, Panepinto@nysenate.gov</li>
+<li><span>Bill Perkins, D-District 30:</span> (518) 455-2441, (212) 222-7315, perkins@senate.state.ny.us</li>
+<li><span>Michael H. Ranzenhofer, R-District 61:</span> (716) 631-8695 / (585) 454-0322, (518) 455-316, ranz@senate.state.ny.us</li>
+<li><span>Patty Ritchie, R-District 48:</span> (315) 782-3418, (315) 342-2057, (315) 393-3024, 518-455-3438, ritchie@nysenate.gov</li>
+<li><span>Daniel L. Squadron, D-District 26:</span> (518) 455-2625, (212) 298-5565, (718) 875-1517, squadron@nysenate.gov</li>
+<li><span>Toby Ann Stavisky, D-District 16:</span> (518) 455-3461, (718) 445-0004, stavisky@nysenate.gov</li>
+<li><span>David J. Valesky, D-District 53:</span> (315)-478-8745, (518)-455-2838, valesky@nysenate.gov</li>
+<li><span>Catharine Young, R-District 57:</span> (716) 372-4901, (716) 664-4603, (518) 455-3563, cyoung@senate.state.ny.us</li>
+</ul>
 </div>
 <div id="stateassembly">
 <h2>NYS Assembly Commission on Transportation</h2>
+<ul id="assemblylist">
+<li><span>David Gantt, Chair:</span> (585) 454-3670, (518) 455-5606, GanttD@assembly.state.ny.us</li>
+<li><span>Anthony Brindisi:</span> (315) 732-1055, (518) 455-5454, brindisia@assembly.state.ny.us</li>
+<li><span>Harry Bronson:</span> (585) 244-5255, (518) 455-4527, bronsonh@assembly.state.ny.us</li>
+<li><span>Marcos Crespo:</span> (718) 893-0202, (518) 455-5514, CrespoM@assembly.state.ny.us</li>
+<li><span>Michael Cusick:</span> (718) 370-1384, (518) 455-5526, CusickM@assembly.state.ny.us</li>
+<li><span>Michael DenDekker:</span> (718) 457-0384, (518) 455-4545, DenDekkerM@assembly.state.ny.us</li>
+<li><span>David DiPietro:</span> (716) 655-0951, (518) 455-5314, DiPietroD@assembly.state.ny.us</li>
+<li><span>Kimberly Jean-Pierre:</span> (631) 957-2087, (518) 455-5787, jeanpierrek@assembly.state.ny.us</li>
+<li><span>Todd Kaminsky:</span> (516) 431-0500, (518) 455-3028, aminskyt@assembly.state.ny.us</li>
+<li><span>Donna Lupardo:</span> (607) 723-9047, (518) 455-5431, LupardoD@assembly.state.ny.us</li>
+<li><span>Chad Lupinacci:</span> (631) 271-8025, (518) 455-5732, LupinacciC@assembly.state.ny.us</li>
+<li><span>Nicole Malliotakis:</span> (718) 987-0197, (518) 455-5716, (718) 987-0197, malliotakisn@assembly.state.ny.us</li>
+<li><span>David McDonough:</span> (516) 409-2070, (518) 455-4633, mcdonoughd@assembly.state.ny.us</li>
+<li><span>Dean Murray:</span> (631) 207-0073, (518) 455-4901, murrayd@assembly.state.ny.us</li>
+<li><span>Bill Nojay:</span> (585) 346-0002, (518) 455-5662, NojayW@assembly.state.ny.us</li>
+<li><span>N. Nick Perry:</span> (718) 385-3336, (518)455-4166, PerryN@assembly.state.ny.us</li>
+<li><span>Edward Ra:</span> (516) 535-4095, (518) 455-4627, rae@assembly.state.ny.us</li>
+<li><span>Samuel Roberts:</span> (315) 449-9536, (518) 455-5383, RobertsS@assembly.state.ny.us</li>
+<li><span>Michelle Schimel:</span> (516) 482-6966, (518) 455-5192, SchimelM@assembly.state.ny.us</li>
+<li><span>Jo Anne Simon:</span> (718) 246-4889, (518) 455-5426, simonj@assembly.state.ny.us</li>
+<li><span>Frank Skartados:</span> (845) 562-0888, (518) 455-5762, SkartadosF@assembly.state.ny.us</li>
+<li><span>James Skoufis:</span> (845) 469-6929, (518) 455-5441, SkoufisJ@assembly.state.ny.us</li>
+<li><span>Phil Steck:</span> (518) 377-0902, (518) 455-5931, SteckP@assembly.state.ny.us</li>
+<li><span>Fred Thiele, Jr.:</span> (631) 537-2583, (518) 455-5997, ThieleF@assembly.state.ny.us</li>
+</ul>
 </div>
 </body>
 </html>
