--- a/walkingandbiking/index.html
+++ b/walkingandbiking/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Bridge and Tunnel</title>
     <link href="../css/styles.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Signika:600' rel='stylesheet' type='text/css'>
 </head>
 <style>
 </style>
@@ -34,7 +35,10 @@
   <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
   <!-- These are the highcharts code libraries. You need to connect to their code to be able to use the library and make charts -->
+  </br>
+  <h2></h2>
   <script src="http://code.highcharts.com/highcharts.js"></script>
+  </br>
   <script src="http://code.highcharts.com/modules/exporting.js"></script>
 
   <!-- This is the javascript stuff you need to actually make a chart -->
