--- a/subway/index.html
+++ b/subway/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Bridge and Tunnel</title>
     <link href="../css/styles.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Signika:600' rel='stylesheet' type='text/css'>
 </head>
 <style>
 </style>
@@ -12,7 +13,7 @@
 	<div id="navbar">
 		<ul id ="navtabs">
 			<li><a href="../index.html">Home</a></li>
-			<li id="selected"><a href="index.html">Subway</a></li>
+			<li id="selected"><a href="subway/index.html">Subway</a></li>
 			<li><a href="../bus/index.html">Bus</a></li>
 			<li><a href="../trains/index.html">Trains</a></li>
 			<li><a href="../carsandtaxis/index.html">Cars and Taxis</a></li>
