--- a/trains/index.html
+++ b/trains/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Bridge and Tunnel</title>
     <link href="../css/styles.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Signika:600' rel='stylesheet' type='text/css'>
 </head>
 <style>
 </style>
@@ -14,7 +15,7 @@
 			<li><a href="../index.html">Home</a></li>
 			<li><a href="../subway/index.html">Subway</a></li>
 			<li><a href="../bus/index.html">Bus</a></li>
-			<li id="selected"><a href="trains/">Trains</a></li>
+			<li id="selected"><a href="trains/index.html">Trains</a></li>
 			<li><a href="../carsandtaxis/index.html">Cars and Taxis</a></li>
 			<li><a href="../walkingandbiking/index.html">Walking and Biking</a></li>
 			<li><a href="../incharge/index.html">Who's in Charge?</a></li>
