added story and some headlines

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
 <div id="mostrecentstory">
-	<img src="">
-	<h2>most recent story</h2>
-	<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+</br>
+	<a href= "http://www.dnainfo.com/new-york/20150226/washington-heights/uptown-leaders-rip-gwb-bus-station-development-for-not-including-locals"> <img src="images/rodriguez.jpg"> </a>
+	<h2> <a href="http://www.dnainfo.com/new-york/20150226/washington-heights/uptown-leaders-rip-gwb-bus-station-development-for-not-including-locals">Uptown Leaders Rip GWB Bus Station Development For Not Including Locals</a></h2>
+	<p>Local leaders in Washington Heights blasted the developer behind the George Washington Bridge Bus Station renovation, charging it failed to hire local workers for the project, is not offering enough community space in the retail complex and is keeping locals in the dark about its plans. <a href="http://www.dnainfo.com/new-york/20150226/washington-heights/uptown-leaders-rip-gwb-bus-station-development-for-not-including-locals"> Read more here ></a>
 	</p>
 </div>
 <div id="nextrecentstory">
