--- a/walkingandbiking/index.html
+++ b/walkingandbiking/index.html
@@ -26,7 +26,9 @@
 <a class="twitter-timeline" href="https://twitter.com/AlizaChasan/lists/nyctransit" data-widget-id="568215212776763392">Tweets from https://twitter.com/AlizaChasan/lists/nyctransit</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
+<h2>Where are people getting hurt?</h2>
     <div id="graph" style="max-width: 65%; position: relative; left:2%; height: 400px"></div>
+<h2>How often were people hurt last year?</h2>
     <div id="graph2" style="max-width: 65%%; position: relative; left:2%; height: 400px"></div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
