--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <title>Bridge and Tunnel</title>
+ <meta name="author" content="Aliza Chasan"/>
+    <meta name="description" content="Website by Aliza Chasan, deals with transportation and transit in New York City. Looks at subways, buses, trains, pedestrians, cyclists. Has information on MTA and Port Authority."/>
+   <meta name=“keywords” content=“transportation, transit, subway, bus, taxi, pedestrian, cyclist, MTA, Port Authority, NYC, New York City” />
     <link href="css/styles.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Signika:600' rel='stylesheet' type='text/css'>
 </head>
@@ -22,35 +25,12 @@
 		</ul>
 	</div>
 </div>
-<script type="text/javascript">
-
-// Google Internal Site Search script- By JavaScriptKit.com (http://www.javascriptkit.com)
-// For this and over 400+ free scripts, visit JavaScript Kit- http://www.javascriptkit.com/
-// This notice must stay intact for use
-
-//Enter domain of site to search.
-var domainroot="http://digitalstorage.journalism.cuny.edu/aliza.chasan/public_html/module1/"
-
-function Gsitesearch(curobj){
-curobj.q.value="site:"+domainroot+" "+curobj.qfront.value
-}
-
-</script>
-
-</br>
-<form action="http://www.google.com/search" method="get" onSubmit="Gsitesearch(this)">
-
-<input name="q" type="hidden" />
-<input name="qfront" type="text" style="width: 180px" /> <input type="submit" value="Search" /></p>
-
-</form>
-
+</br></br>
 <div id="twitterlist">
 <a class="twitter-timeline" href="https://twitter.com/AlizaChasan/lists/nyctransit" data-widget-id="568215212776763392">Tweets from https://twitter.com/AlizaChasan/lists/nyctransit</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
 <div id="mostrecentstory">
-</br>
 	<a href= "http://www.dnainfo.com/new-york/20150226/washington-heights/uptown-leaders-rip-gwb-bus-station-development-for-not-including-locals"> <img src="images/rodriguez1.jpg"> </a>
 	<h2> <a href="http://www.dnainfo.com/new-york/20150226/washington-heights/uptown-leaders-rip-gwb-bus-station-development-for-not-including-locals">Uptown Leaders Rip GWB Bus Station Development For Not Including Locals</a></h2>
 	<p>Local leaders in Washington Heights blasted the developer behind the George Washington Bridge Bus Station renovation, charging it failed to hire local workers for the project, is not offering enough community space in the retail complex and is keeping locals in the dark about its plans. <a href="http://www.dnainfo.com/new-york/20150226/washington-heights/uptown-leaders-rip-gwb-bus-station-development-for-not-including-locals"> Read more here ></a>
