--- a/subway/index.html
+++ b/subway/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <title>Bridge and Tunnel</title>
+<meta name="author" content="Aliza Chasan"/>
+    <meta name="description" content="Website by Aliza Chasan, deals with transportation and transit in New York City. Looks at subways, buses, trains, pedestrians, cyclists. Has information on MTA and Port Authority."/>
+   <meta name=“keywords” content=“transportation, transit, subway, bus, taxi, pedestrian, cyclist, MTA, Port Authority, NYC, New York City” />
     <link href="../css/styles.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Signika:600' rel='stylesheet' type='text/css'>
 </head>
@@ -22,19 +25,16 @@
 		</ul>
 	</div>
 </div>
+</br></br>
 <div id="twitterlist">
 <a class="twitter-timeline" href="https://twitter.com/AlizaChasan/lists/nyctransit" data-widget-id="568215212776763392">Tweets from https://twitter.com/AlizaChasan/lists/nyctransit</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
 <div id="mostrecentstory">
-	<img src="">
-	<h2>most recent story</h2>
-	<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+	<a href="http://jalopnik.com/you-are-not-insane-the-new-york-city-subway-is-getting-1687817007/+maxread"><img src="../images/subway.jpg"></a>
+	<h2><a href="http://jalopnik.com/you-are-not-insane-the-new-york-city-subway-is-getting-1687817007/+maxread"><span>Check out this story on Jalopnik:</span> You Are Not Insane, The New York City Subway Is Getting Worse</a></h2>
+	<p>This story looks at data from 2014. It shows that the number of subway delays has gone up 45.6 percent since 2013. <a href="http://jalopnik.com/you-are-not-insane-the-new-york-city-subway-is-getting-1687817007/+maxread">Read the story here></a>
 	</p>
-</div>
-<div id="nextrecentstory">
-	<h2>next most recent story</h2>
-	<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 </div>
 </body>
 </html>
