--- a/trains/index.html
+++ b/trains/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <title>Bridge and Tunnel</title>
+<meta name="author" content="Aliza Chasan"/>
+    <meta name="description" content="Website by Aliza Chasan, deals with transportation and transit in New York City. Looks at subways, buses, trains, pedestrians, cyclists. Has information on MTA and Port Authority."/>
+   <meta name=“keywords” content=“transportation, transit, subway, bus, taxi, pedestrian, cyclist, MTA, Port Authority, NYC, New York City” />
     <link href="../css/styles.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Signika:600' rel='stylesheet' type='text/css'>
 </head>
@@ -22,19 +25,15 @@
 		</ul>
 	</div>
 </div>
+</br></br>
 <div id="twitterlist">
 <a class="twitter-timeline" href="https://twitter.com/AlizaChasan/lists/nyctransit" data-widget-id="568215212776763392">Tweets from https://twitter.com/AlizaChasan/lists/nyctransit</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
 <div id="mostrecentstory">
-	<img src="">
-	<h2>most recent story</h2>
-	<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-	</p>
-</div>
-<div id="nextrecentstory">
-	<h2>next most recent story</h2>
-	<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+	
+	<h2>Check out this piece on train crossing from the New York Times</h2>
+	<iframe width="480" height="373" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="nyt_video_player" title="New York Times Video - Embed Player" src="http://graphics8.nytimes.com/bcvideo/1.0/iframe/embed.html?videoId=100000003506811&playerType=embed"></iframe>
 </div>
 </body>
 </html>
