--- a/incharge/index.html
+++ b/incharge/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <title>Bridge and Tunnel</title>
+<meta name="author" content="Aliza Chasan"/>
+    <meta name="description" content="Website by Aliza Chasan, deals with transportation and transit in New York City. Looks at subways, buses, trains, pedestrians, cyclists. Has information on MTA and Port Authority."/>
+   <meta name=“keywords” content=“transportation, transit, subway, bus, taxi, pedestrian, cyclist, MTA, Port Authority, NYC, New York City” />
     <link href="../css/styles.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Signika:600' rel='stylesheet' type='text/css'>
 </head>
@@ -22,6 +25,7 @@
 		</ul>
 	</div>
 </div>
+</br></br>
 <div id="twitterlist">
 <a class="twitter-timeline" href="https://twitter.com/AlizaChasan/lists/nyctransit" data-widget-id="568215212776763392">Tweets from https://twitter.com/AlizaChasan/lists/nyctransit</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
