fixing two typos

--- a/bus/index.html
+++ b/bus/index.html
@@ -33,7 +33,7 @@
 <div id="mostrecentstory">
 	<a href="http://www.wsj.com/articles/n-j-dems-push-for-more-oversight-of-port-authority-defying-chris-christie-1425582714"><img src="../images/pa.jpg"></a>
 	<h2><a href="http://www.wsj.com/articles/n-j-dems-push-for-more-oversight-of-port-authority-defying-chris-christie-1425582714"><span>Check out this Wall Street Journal story on: </span>Port Authority</a></h2>
-	<p>This story looks at attempts to reform the bistate agency Port Authority. Months ago, both legislative houses in New York and New Jersey approved reform legislation. The governors of both states vetoed. Now, New Jersey legislators are looking to override Chris Christie's Veto.<a href="http://www.wsj.com/articles/n-j-dems-push-for-more-oversight-of-port-authority-defying-chris-christie-1425582714"> Read more here> </a></p>
+	<p>This story looks at attempts to reform the bistate agency Port Authority. Months ago, both legislative houses in New York and New Jersey approved reform legislation. The governors of both states vetoed. Now, New Jersey legislators are looking to override Chris Christie's veto.<a href="http://www.wsj.com/articles/n-j-dems-push-for-more-oversight-of-port-authority-defying-chris-christie-1425582714"> Read more here> </a></p>
 </div>
 </body>
 </html>
