--- a/trains/index.html
+++ b/trains/index.html
@@ -32,7 +32,7 @@
 </div>
 <div id="mostrecentstory">
 	
-	<h2>Check out this piece on train crossing from the New York Times</h2>
+	<h2>Check out this piece on train crossing from the New York Times:</h2>
 	<iframe width="480" height="373" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="nyt_video_player" title="New York Times Video - Embed Player" src="http://graphics8.nytimes.com/bcvideo/1.0/iframe/embed.html?videoId=100000003506811&playerType=embed"></iframe>
 </div>
 </body>
